--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc --p ./tsconfig-build.json && vite build",
+    "build": "tsc  && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -42,6 +42,7 @@
   "dependencies": {
     "@ionic/react": "^7.4.0",
     "ionic-react-pwa-install": "^0.0.7",
-    "mobile-device-detect": "^0.4.3"
+    "mobile-device-detect": "^0.4.3",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
